[package]
name = "ttfb"
description = """
Library + CLI-Tool to measure the TTFB (time to first byte) of HTTP(S) requests.
Additionally, this crate measures the times of DNS lookup, TCP connect, and
TLS handshake.
"""
version = "1.8.0"
edition = "2021"
keywords = ["ttfb", "http", "timings", "web"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/ttfb"
repository = "https://github.com/phip1611/ttfb"
documentation = "https://docs.rs/ttfb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bin]]
name = "ttfb"
required-features = ["bin"]

# Feature for all additional dependencies of the binary.
[features]
bin = ["clap", "crossterm"]

[dependencies]
# +++ LIBRARY +++

# DNS over systems default DNS resolver
trust-dns-resolver = { version = "0.23.0", features = ["dns-over-rustls"] }
# TLS handshake
rustls = { version = "0.21.8", features = ["dangerous_configuration"] }
rustls-connector = { version = "0.18.3", features = [
  "rustls-native-certs",
  "webpki-roots",
  "webpki-roots-certs",
] }
# automatic Display impl for enums
derive_more = { version = "0.99.17", default-features = false, features = [
  "display",
] }
# nice abstraction of URL
url = "2.4.1"
regex = "~1.9.5"

# +++ BINARY +++
# used for the binary, not the lib
[dependencies.crossterm]
optional = true
version = "0.27.0"

# CLI args parsing
[dependencies.clap]
optional = true
version = "~4.4.4"
features = [
  "std",
  "color",
  "help",
  "usage",
  "error-context",
  "suggestions",
  "derive",
  "unicode",
  "wrap_help",
]
