[package]
name = "ttfb"
description = """
Library + CLI utility to measure the TTFB (time to first byte) of HTTP(S)
requests. This includes data of intermediate steps, such as the relative and
absolute timings of DNS lookup, TCP connect, and TLS handshake.
"""
version = "1.12.0"
edition = "2021"
rust-version = "1.67" # MSRV of the library (= min(lib,bin))
keywords = ["ttfb", "http", "timings", "web"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/ttfb"
repository = "https://github.com/phip1611/ttfb"
documentation = "https://docs.rs/ttfb"
authors = [
  "Philipp Schuster <phip1611@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
strip = true

[[bin]]
name = "ttfb"
required-features = ["bin"]

# Feature for all additional dependencies of the binary.
[features]
bin = ["dep:clap", "dep:crossterm"]

[dependencies]
# +++ LIBRARY +++

# DNS over systems default DNS resolver
hickory-resolver = { version = "0.24.0", default-features = false, features = ["dns-over-rustls", "system-config"] }
# TLS handshake
rustls = { version = "0.23.0", default-features = false, features = [ "tls12", "logging", "ring"] }
rustls-connector = { version = "0.21.0", default-features = false, features = [
  "rustls--ring",
  "native-certs",
  "rustls-native-certs",
  "webpki-roots-certs",
] }
# automatic Display impl for enums
derive_more = { version = "0.99.0", default-features = false, features = [
  "display",
] }
# nice abstraction of URL
url = "2.5.0"

# +++ BINARY +++
# used for the binary, not the lib
[dependencies.crossterm]
optional = true
version = "0.27.0"

# CLI args parsing
[dependencies.clap]
optional = true
version = "~4.5.0"
features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "suggestions",
  "unicode",
  "usage",
  "wrap_help",
]

[dev-dependencies]
tokio = "1.37"
