[package]
name = "ttfb"
description = """
Library + CLI utility to measure the TTFB (time to first byte) of HTTP(S)
requests. This includes data of intermediate steps, such as the relative and
absolute timings of DNS lookup, TCP connect, and TLS handshake.
"""
version = "1.15.0"
edition = "2024"
rust-version = "1.85" # MSRV of the library (= min(lib,bin))
keywords = ["ttfb", "http", "timings", "web"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/phip1611/ttfb"
repository = "https://github.com/phip1611/ttfb"
documentation = "https://docs.rs/ttfb"
authors = [
  "Philipp Schuster <phip1611@gmail.com>"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[[bin]]
name = "ttfb"
required-features = ["bin"]

# Feature for all additional dependencies of the binary.
[features]
bin = ["dep:clap", "dep:crossterm"]

[dependencies]
# +++ LIBRARY +++

# automatic Display impl for enums
derive_more = { version = "2.0.1", default-features = false, features = [
  "display",
] }
# DNS over systems default DNS resolver
hickory-resolver = { version = "=0.25.1", default-features = false, features = ["system-config", "tokio"] }
# TLS handshake
rustls = { version = "0.23.25", default-features = false, features = ["tls12", "logging", "ring"] }
rustls-connector = { version = "0.22.0", default-features = false, features = [
  "rustls--ring",
  "native-certs",
  "webpki-roots-certs",
] }
# nice abstraction of URL
url = "2.5.4"

# +++ BINARY +++
# used for the binary, not the lib
[dependencies.crossterm]
optional = true
version = "0.29.0"

# CLI args parsing
[dependencies.clap]
optional = true
version = "~4.5.35"
features = [
  "color",
  "derive",
  "error-context",
  "help",
  "std",
  "suggestions",
  "unicode",
  "usage",
  "wrap_help",
]

[dependencies.tokio]
version = "1.47.1"
default-features = false
features = [
  "rt",
]

[lints.rust]
# level is probably irrelevant
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(network_tests)'] }
